# zigzag

./: .gitignore  Makefile  README.md  codemap.md  flake.nix  install.sh  package-lock.json  package.json  package.nix  skills-lock.json
.sandcastle/: .gitignore  (+4 more)
z/: Cargo.toml  codemap.md
z/crates/: codemap.md
z/crates/z-autopilot/: Cargo.toml
z/crates/z-autopilot/src/: builtin.rs  config.rs  dsl.rs  lib.rs  lifecycle.rs  notify.rs  persist.rs  run_loop.rs  state.rs  trigger.rs
z/crates/z-cli/: Cargo.toml  codemap.md
z/crates/z-cli/src/: activity_store.rs  autopilot_runner.rs  codemap.md  config_store.rs  depcheck_impl.rs  forge.rs  git_preview.rs  log.rs  main.rs  notification_store.rs  notify.rs  preview.rs  prune.rs  remote.rs  repo_config.rs  session_manager.rs  session_open.rs  workspace.rs  worktree_manager.rs  worktree_metadata_store.rs  zellij_action.rs
z/crates/z-core/: Cargo.toml  codemap.md
z/crates/z-core/src/: action.rs  activity.rs  agent_activity.rs  claude_hook.rs  codemap.md  config.rs  depcheck.rs  domain.rs  error.rs  gh.rs  layout.rs  lib.rs  log.rs  notification.rs  session_entry.rs  template.rs  theme.rs  traits.rs  web.rs  worktree_topology.rs  zellij.rs
z/crates/z-plugin/: Cargo.toml  codemap.md
z/crates/z-plugin/src/: codemap.md  lib.rs
z/crates/z-tui/: Cargo.toml  codemap.md
z/crates/z-tui/src/: codemap.md  lib.rs  preview_state.rs  refresh.rs
z/crates/z-web/: Cargo.toml
z/docs/plans/: 2026-04-11-mobile-notifications-profiles.md
zigzag/: Cargo.toml  codemap.md
zigzag/crates/: codemap.md
zigzag/crates/zigzag-autopilot/: Cargo.toml  codemap.md
zigzag/crates/zigzag-cli/: Cargo.toml  codemap.md
zigzag/crates/zigzag-core/: Cargo.toml  codemap.md
zigzag/crates/zigzag-plugin/: Cargo.toml  codemap.md
zigzag/crates/zigzag-tui/: Cargo.toml  codemap.md
zigzag/crates/zigzag-web/: Cargo.toml  codemap.md
(+87 files in other folders)
