[package]
name = "zigzag-cli"
version.workspace = true
edition.workspace = true
description = "Zigzag: CLI/TUI project manager built on Zellij"

[[bin]]
name = "zigzag"
path = "src/main.rs"

[dependencies]
zigzag-core.workspace = true
zigzag-tui.workspace = true
zigzag-autopilot.workspace = true
serde_json.workspace = true
kdl.workspace = true

[dev-dependencies]
tempfile = "3"
